--- a/football/world-champions.html
+++ b/football/world-champions.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width" />    
     <title>Data Visualisation: Unofficial World Football Champions</title>
     <meta charset="utf-8"><meta property="og:url" content="http://www.andybarefoot.com/football/world-champions.html">
     <meta property="og:title" content="Unofficial Football World Championships">
@@ -44,14 +45,14 @@
 
     <div id="overlay">
       <div id="textContent">
-        <h1><span id="t1">UNOFFICIAL</span> <span id="t2">WORLD</span> <span id="t3">FOOTBALL</span> <span id="t4">CHAMPIONS</span></h1>
+        <h1><span id="t1">UNOFFICIAL</span> <span id="t2">WORLD</span><br/><span id="t3">FOOTBALL</span> <span id="t4">CHAMPIONS</span></h1>
         <p>The Unofficial Football World Championships imagines what would happen if the World Football Champions were not decided once every four years at a tournament but instead followed the boxing model.</p>
         <p>Starting from the very first international game between Scotland and England the reigning World Champions retain their crown only until the next match they lose, at which point the title transfers to their victorious opponents.</p>
         <p>This magnificent folly is documented at the <a href="http://www.ufwc.co.uk/" target="ufsc">Unofficial Football World Championships</a> and this is merely an exercise in data visualisation based on their results.</p>
         <p>The interactive map shows all the countries that have taken part in the UFWC matches so far. Use the controls in the top left corner to play an animation showing how the UWFC has been contested between teams as unlikely as the Netherland Antilles, Libya, North Korea and Guam.</p>
         <p>Key:</p>
-        <p><img src="images/icons/key-champ.png"> Current Champion&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/icons/key-chall.png"> Last challenger&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/icons/key-ex-champ.png"> Ex-champion &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/icons/key-ex-chall.png"> Ex-challenger<br/>
-        <img src="images/icons/key-score.png"> Times won or defended championship</p>
+        <p><nobr><img src="images/icons/key-champ.png"> Current Champion</nobr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><img src="images/icons/key-chall.png"> Last challenger</nobr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><img src="images/icons/key-ex-champ.png"> Ex-champion</nobr> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><img src="images/icons/key-ex-chall.png"> Ex-challenger</nobr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <nobr><img src="images/icons/key-score.png"> Times won or defended championship</nobr></p>
         <p id="close"><a href="javascript:closeOverlay()">[X]</a></p>
      </div>
    </div>
