--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
 				<h2>Personal Projects</h2>
 			</div>
 			<div class="project">
+				<div class="projectTitle"><h3>Data Vis: UFWC Map</h3></div>
+				<div class="projectDesc">
+					<a href="/football/world-champions.html" target="footballmap"><img src="images/ufwc-map.png" /></a>
+					<p>Following on from my previous <a href="/football/" target="football">UFWC data visualisation</a> I wanted to show the progress of the Unofficial World Football Championship using an animated interactive map.</p>
+					<p><a href="/football/world-champions.html" target="footballmap">The animation</a> shows details of all 926 matches played so far as the map updates to show which teams have held or challenged for the title.</p>
+					<p>The visualisation was built using D3.js and JQuery and all the game data was sourced from the <a href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
+				</div>
+			</div>
+			<div class="project">
 				<div class="projectTitle"><h3>Data Vis: Premier League</h3></div>
 				<div class="projectDesc">
 					<a href="/football/path.html" target="premier"><img src="images/premier.png" /></a>
