--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 				<div class="projectTitle"><h3>Data Vis: UFWC Map</h3></div>
 				<div class="projectDesc">
 					<a href="/football/world-champions.html" target="footballmap"><img src="images/ufwc-map.png" /></a>
-					<p>Following on from my previous <a href="/football/" target="football">UFWC data visualisation</a> I wanted to show the progress of the Unofficial World Football Championship using an animated interactive map.</p>
-					<p><a href="/football/world-champions.html" target="footballmap">The animation</a> shows details of all 926 matches played so far as the map updates to show which teams have held or challenged for the title.</p>
-					<p>The visualisation was built using D3.js and JQuery and all the game data was sourced from the <a href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
+					<p>Following on from my previous <a class="ext" href="/football/" target="football">UFWC data visualisation</a> I wanted to show the progress of the Unofficial World Football Championship using an <a href="/football/world-champions.html" target="footballmap">animated interactive map</a>.</p>
+					<p>The animation shows details of all 926 matches played so far as the map updates to show which teams have held or challenged for the title.</p>
+					<p>The visualisation was built using D3.js and JQuery and all the game data was sourced from the <a class="ext" href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
 				</div>
 			</div>
 			<div class="project">
@@ -86,9 +86,9 @@
 				<div class="projectTitle"><h3>Data Vis: UFWC</h3></div>
 				<div class="projectDesc">
 					<a href="/football/" target="football"><img src="images/football.png" /></a>
-					<p>The <a href="http://www.ufwc.co.uk/" target="ufwc">Unofficial Football World Championships</a> is a project by Paul Brown that tracks the World Champions of football as if the title were decided in the same way as boxing, i.e a team remains champions until they lose a game.</p>
+					<p>The <a class="ext" href="http://www.ufwc.co.uk/" target="ufwc">Unofficial Football World Championships</a> is a project by Paul Brown that tracks the World Champions of football as if the title were decided in the same way as boxing, i.e a team remains champions until they lose a game.</p>
 					<p>My <a href="/football/" target="football">data visualisation</a> shows all of the 918 "title decider" games that have been played so far showing how thetitle has jumped from nation to nation and continent to continent.</p>
-					<p>The visualisation was built using D3.js and JQuery and all the data was sourced from the <a href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
+					<p>The visualisation was built using D3.js and JQuery and all the data was sourced from the <a class="ext" href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
 				</div>
 			</div>
 			<div class="project">
@@ -97,7 +97,7 @@
 					<a href="/olympics/" target="olympics"><img src="images/olympics.png" /></a>
 					<p>A selection of data visualisations from the <a href="/olympics/" target="olympics">2016 Summer Olympics</a>.</p>
 					<p>Data was either manually collected from wikipedia or scraped in real time from the BBC medal table and then stored in MySQL and formatted to CSV or JSON files.</p>
-					<p>The visualisations were built using D3.js and JQuery using some of Mike Bostock's excellent <a href="https://bl.ocks.org/mbostock" target="d3">examples</a> as a starting point.</p>
+					<p>The visualisations were built using D3.js and JQuery using some of Mike Bostock's excellent <a class="ext" href="https://bl.ocks.org/mbostock" target="d3">examples</a> as a starting point.</p>
 				</div>
 			</div>
 			<div class="project">
@@ -105,8 +105,8 @@
 				<div class="projectDesc">
 					<a href="/cocktails/" target="cocktails"><img src="images/cocktails.png" /></a>
 					<p>An exercise in using D3.js and SVG to create <a href="/cocktails/" target="cocktails">data visualisations of cocktails</a> and their ingredients.</p>
-					<p>Inspired by this <a href="http://www.informationisbeautiful.net/visualizations/cocktails/" target="_blank">original visualisation</a> by Tatjana Dubovina & David McCandless I wanted to make an entirely dynamically generated version.</p>
-					<p>The data was taken from <a href="https://en.wikipedia.org/wiki/List_of_cocktails" target="_blank">Wikipedia</a> and is served in JSON from a MySQL database.</p>
+					<p>Inspired by this <a class="ext" href="http://www.informationisbeautiful.net/visualizations/cocktails/" target="_blank">original visualisation</a> by Tatjana Dubovina & David McCandless I wanted to make an entirely dynamically generated version.</p>
+					<p>The data was taken from <a class="ext" href="https://en.wikipedia.org/wiki/List_of_cocktails" target="_blank">Wikipedia</a> and is served in JSON from a MySQL database.</p>
 					<p>Each visualisation is generated programmatically from the data, including the drawing of the glass outline to create a <a href="/cocktails/" target="cocktails">menu of over 70 cocktails</a>.</p>
 				</div>
 			</div>
@@ -117,16 +117,16 @@
 					<p>Fans of Game of Thrones know that Valar Morghulis (all men must die) but when over 200 named characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Lord of Light, or The Many-Faced God of Death, or the Great Stallion, etc...) then it gets hard to keep track of the tragedy.</p>
 					<p>Fortunately Maester Barefoot has created a comprehensive record of all these deaths, whether violent, very violent or extremely violent.</p>
 					<p><a href="/got/" target="_whip">Valar Morghulis</a> shows every death and who was responsibly for the slaying. A kind of "butchery tree" if you like.</p>
-					<p>The data was scraped from the excellent <a href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a> and the data representation is implemented using Mike Bostock's marvellous <a href="https://bl.ocks.org/mbostock" target="d3">D3 library</a>.</p>
+					<p>The data was scraped from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a> and the data representation is implemented using Mike Bostock's marvellous <a class="ext" href="https://bl.ocks.org/mbostock" target="d3">D3 library</a>.</p>
 				</div>
 			</div>
 			<div class="project">
 				<div class="projectTitle"><h3>Web: MP CoMParison</h3></div>
 				<div class="projectDesc">
 					<a href="/politics/mpcompare/" target="mp-compare"><img src="images/mp-compare.png" /></a>
-					<p>The site <a href="http://www.publicwhip.org.uk/" target="_whip">the Public Whip</a> aggregates the data on how MPs in the UK parliament vote. They then group this by similar votes to provide an insight into how much each MP supports a particular policy.</p>
+					<p>The site <a class="ext" href="http://www.publicwhip.org.uk/" target="_whip">the Public Whip</a> aggregates the data on how MPs in the UK parliament vote. They then group this by similar votes to provide an insight into how much each MP supports a particular policy.</p>
 					<p>However at the moment the site does not provide a tool to enable users to easily compare MPs and see their relative support for each issue.</p>
-					<p>I made a <a href="/politics/mpcompare/" target="mp-compare">small site</a> that scrapes the data from <a href="http://www.publicwhip.org.uk/" target="_whip">the Public Whip</a> and allows the user to compare support for related policies across groups of MPs. The tool also allows the user to select any policy or MP and add them to the comparison.</p>
+					<p>I made a <a href="/politics/mpcompare/" target="mp-compare">small site</a> that scrapes the data from <a class="ext" href="http://www.publicwhip.org.uk/" target="_whip">the Public Whip</a> and allows the user to compare support for related policies across groups of MPs. The tool also allows the user to select any policy or MP and add them to the comparison.</p>
 					<p>The site was built using PHP to scrape the data and serve via API, and AngularJS to provide the interactive front-end functionality.</p>
 					<p><a href="/politics/mpcompare/" target="mp-compare">CoMParison - Compare MPs on their support for key policies.</a></p>
 				</div>
@@ -146,7 +146,7 @@
 					<a href="https://play.google.com/store/apps/details?id=com.GunterGames.SkiVR" target="skivr"><img src="images/ski-vr.png" /></a>
 					<p>Ski VR is a quick VR demo built for Google Cardboard but also playable without a headset.</p>
 					<p>Slide gracefully down the mountain between trees and alpine chalets in a Virtual Reality winter wonderland.</p>
-					<p>Ski VR was built in <a href="https://unity3d.com/" target="_unity">Unity</a> with the Google Cardboard SDK and uses 3rd party graphical assets.</p>
+					<p>Ski VR was built in <a class="ext" href="https://unity3d.com/" target="_unity">Unity</a> with the Google Cardboard SDK and uses 3rd party graphical assets.</p>
 					<p><a href="https://play.google.com/store/apps/details?id=com.GunterGames.SkiVR" target="skivr">Ski VR on Google Play.</a></p>
 				</div>
 			</div>
@@ -157,7 +157,7 @@
 					<p>Color Hex is a mobile puzzle game for Android and iOS built and published uing the Unity platform.</p>
 					<p>The player must try and match patterns by mixing colours together on a hexagonal grid. As the patterns get more complicated the puzzle becomes more difficult.</p>
 					<p>There are 2 play modes with a combined total of 222 levels.</p>
-					<p>Color Hex was built in <a href="https://unity3d.com/" target="_unity">Unity</a> which supports exporting to both iOS and Android platforms.</p>
+					<p>Color Hex was built in <a class="ext" href="https://unity3d.com/" target="_unity">Unity</a> which supports exporting to both iOS and Android platforms.</p>
 					<p><a href="https://play.google.com/store/apps/details?id=com.guntergames.colourhexnew" target="colorhexplay">Color Hex on Google Play.</a><br />
 					<a href="https://itunes.apple.com/gb/app/id1093790722" target="colorhexitunes">Super Color Hex on iTunes.</a></p>
 				</div>
@@ -166,7 +166,7 @@
 				<div class="projectTitle"><h3>Mobile Gaming: Super Dice</h3></div>
 				<div class="projectDesc">
 					<a href="http://www.guntergames.com/superdice" target="sneakers"><img src="images/super-dice.jpg" /></a>
-					<p>My first attempt at using the <a href="https://unity3d.com/" target="_unity">Unity</a> platform to create a mobile game was a mobile version of the dice game Farkle.</p>
+					<p>My first attempt at using the <a class="ext" href="https://unity3d.com/" target="_unity">Unity</a> platform to create a mobile game was a mobile version of the dice game Farkle.</p>
 					<p><a href="http://www.guntergames.com/superdice" target="sneakers">Super Dice</a></p>
 				</div>
 			</div>
@@ -176,7 +176,7 @@
 					<a href="http://www.allthesneakers.com/" target="sneakers"><img src="images/all-the-sneakers.jpg" /></a>
 					<p>In-progress search engine of sneakers collating and comparing sneakers from a number of eCommerce sites.</p>
 					<p>Regularly spiders a number of sites and compares prices where identical sneakers appear on multiple sites.</p>
-					<p>The spiders and APIs are built in PHP, the database in MySql and the front-end uses <a href="http://sass-lang.com/" target="_sass">SASS</a> for the CSS. 
+					<p>The spiders and APIs are built in PHP, the database in MySql and the front-end uses <a class="ext" href="http://sass-lang.com/" target="_sass">SASS</a> for the CSS. 
 					<p><a href="http://www.allthesneakers.com/" target="sneakers">All The Sneakers</a></p>
 				</div>
 			</div>
@@ -192,7 +192,7 @@
 				<div class="projectTitle"><h3>Web: We can't go on like this</h3></div>
 				<div class="projectDesc">
 					<a href="/politics/cameron.php" target="cameron"><img src="images/cameron.jpg" /></a>
-					<p>Good old David Cameron. He's so suave yet so caring. he just wants the best for the country. He says so in his lovely new <a href="http://www.flickr.com/photos/conservatives/4244583668/sizes/l/in/photostream/" target="flickr-tory">poster campaign</a> (NSFDuring lunch).</p>
+					<p>Good old David Cameron. He's so suave yet so caring. he just wants the best for the country. He says so in his lovely new <a class="ext" href="http://www.flickr.com/photos/conservatives/4244583668/sizes/l/in/photostream/" target="flickr-tory">poster campaign</a> (NSFDuring lunch).</p>
 					<p>Deface David's poster with your own words with <a href="/politics/cameron.php" target="cameron">"Make your own David Cameron poster"</a>.</p>
 					<p>Go on, <a href="/politics/cameron.php" target="_blank">have a go</a>. You know you want to. Make it look like he is saying rude words. Hurr hurr hurr!</p>
 				</div>
@@ -201,8 +201,8 @@
 				<div class="projectTitle"><h3>Web: Malcolm Tucker</h3></div>
 				<div class="projectDesc">
 					<a href="/politics/tucker.php" target="tucker"><img src="images/malcolm-tucker.jpg" /></a>
-					<p>Combines the <a href="/politics/cameron.php" target="cameron">David Cameron poster generator</a> with the foul-mouthed tirades of Malcolm Tucker, <a href="http://www.youtube.com/watch?v=LugJd6uGJqI" target="youtube-tucker">sweary spin doctor</a> from The Thick of It.</p>
-					<p>A random choice of blue bon-mot is substituted every time you click the "Tuckerise" button so <a href="http://www.andybarefoot.com/politics/tucker.php" target="tucker">click away</a>. However, be warned. He is a very very rude man and if you don't like naughty words you probably won't like this.</p>
+					<p>Combines the <a href="/politics/cameron.php" target="cameron">David Cameron poster generator</a> with the foul-mouthed tirades of Malcolm Tucker, <a class="ext" href="http://www.youtube.com/watch?v=LugJd6uGJqI" target="youtube-tucker">sweary spin doctor</a> from The Thick of It.</p>
+					<p>A random choice of blue bon-mot is substituted every time you click the "Tuckerise" button so <a href="/politics/tucker.php" target="tucker">click away</a>. However, be warned. He is a very very rude man and if you don't like naughty words you probably won't like this.</p>
 				</div>
 			</div>
 			<div class="project">
