Added meta data to Maps index

--- a/maps/index.html
+++ b/maps/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />    
-    <title>Interactive Map</title>
-<!--
-    <meta charset="utf-8"><meta property="og:url" content="http://www.andybarefoot.com/football/world-champions.html">
-    <meta property="og:title" content="Unofficial Football World Championships">
-    <meta property="og:description" content="Animated map of the different countries to win or challenge for the Unofficial World Football Championship.">
-    <meta property="og:image" content="http://www.andybarefoot.com/football/images/fb-football-world-champs.png">
--->
+    <title>Interactive Map 1</title>
+    <meta charset="utf-8"><meta property="og:url" content="http://www.andybarefoot.com/maps/">
+    <meta property="og:title" content="Responsive, interactive D3.js map">
+    <meta property="og:description" content="D3.js Map with zoom/pan and rollover labels using D3.js(v4) and JQuery. Set container div size to determine size of map.">
+    <meta property="og:image" content="http://www.andybarefoot.com/maps/images/responsive-D3-map.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="/jscript/d3.v4.min.js"></script>
     <script src="/jscript/analyticstracking.js"></script>
