--- a/maps/zoom.html
+++ b/maps/zoom.html
@@ -21,11 +21,22 @@
     </div>
     <script type="text/javascript">
 
+      // variables for catching colours from CSS
+      var countryFillColour;
+      var countryStrokeColour;
+
+      var countryHighlightColour = "#4B5358";
+
       // Define size of map group
       // Full world map is 2:1 ratio
       // Using 2:5 because we will crop top and bottom of map
       w = 4000;
       h = 1600;
+
+      // variables for catching min and max values
+      var minZoom;
+      var maxZoom;
+
 
       // Define map projection
       var projection = d3.geoEquirectangular()
@@ -39,7 +50,6 @@
         .projection(projection)
       ;
 
-
       // Define map zoom behaviour
       var zoom = d3.zoom()
         .on("zoom", zoomed)
@@ -49,12 +59,14 @@
       function initiateZoom(){
         // Define a "minzoom" whereby the "Countries" is as small possible without leaving white space at top/bottom or sides  
         minZoom = Math.max($("#map-holder").width()/w,$("#map-holder").height()/h);
+        // set max zoom to a suitable factor of this value 
+        maxZoom = 20*minZoom;
         // define X and Y offset for centre of map to be shown in centre of holder
         midX = ($("#map-holder").width() - (minZoom*w))/2;
         midY = ($("#map-holder").height() - (minZoom*h))/2;
         zoom
           // set minimum extent of zoom to "minzoom", set max extent to a suitable factor of this value 
-          .scaleExtent([minZoom, 20*minZoom])
+          .scaleExtent([minZoom, maxZoom])
           // set translate extent so that panning can't cause map to move out of viewport 
           .translateExtent([[0, 0], [w, h]])
         ;
@@ -90,7 +102,6 @@
 
       // get map data
       d3.json("mapdata/custom50.json", function(json){
-          console.log(json);
           //Bind data and create one path per GeoJSON feature
           countriesGroup = svg
             .append("g")
@@ -103,13 +114,19 @@
             .attr("width", w)
             .attr("height", h)
           ;
+
+
+
           // draw a path for each feature/country
           countries = countriesGroup
             .selectAll("path")
             .data(json.features)
             .enter()
-            .append("path")
+            .append("path")            
             .attr("d", path)
+            .attr("id", function(d,i) {
+              return "country" + d.properties.iso_a3;
+            })
             .attr("class", "country")
             // add a mouseover action to show name label for feature/country
             .on("mouseover", function(d,i) {
@@ -118,7 +135,16 @@
             .on("mouseout", function(d,i) {
               $("#countryLabel" + d.properties.iso_a3).hide();
             })
+            // add an onlcick action to zoom into clicked country
+            .on("click", function(d,i) {
+              d3.selectAll('.country').style("fill", countryFillColour);
+              d3.select(this).style("fill", countryHighlightColour);
+              boxZoom(path.bounds(d),path.centroid(d),20);
+            })
           ;
+          // capture default colours for country stroke and fill
+          countryFillColour = d3.selectAll('.country').style("fill");
+          countryStrokeColour = d3.selectAll('.country').style("stroke");
           // Add a label group to each feature/country. This will contain the country name and a background rectangle
           // Use CSS to have class "countryLabel" initially hidden 
           countryLabels = countriesGroup
@@ -139,6 +165,12 @@
             })
             .on("mouseout", function(d,i) {
               $("#countryLabel" + d.properties.iso_a3).hide();
+            })
+            // add an onlcick action to zoom into clicked country
+            .on("click", function(d,i) {
+              d3.selectAll('.country').style("fill", countryFillColour);
+              d3.select('#country' + d.properties.iso_a3).style("fill", countryHighlightColour);
+              boxZoom(path.bounds(d),path.centroid(d),20);
             })
           ;
           // add the text to the label group showing country name
@@ -172,8 +204,44 @@
         countriesGroup.attr("transform", "translate(" + [t.x,t.y] + ")scale(" + t.k + ")");
       }
 
-
-
+      // zoom to show a bounding box, with optional additional padding as percentage of box size
+      function boxZoom(box, centroid, paddingPerc){
+        minXY = box[0];
+        maxXY = box[1];
+        // find size of map area defined
+        zoomWidth = Math.abs(minXY[0]-maxXY[0]);
+        zoomHeight = Math.abs(minXY[1]-maxXY[1]);
+        // find midpoint of map area defined
+        zoomMidX = centroid[0];
+        zoomMidY = centroid[1];
+        // increase map area to include padding
+        zoomWidth = zoomWidth * (1+paddingPerc/100);
+        zoomHeight = zoomHeight * (1+paddingPerc/100);
+        // find scale required for area to fill svg
+        maxXscale = $("svg").width()/zoomWidth;
+        maxYscale = $("svg").height()/zoomHeight;
+        zoomScale = Math.min(maxXscale, maxYscale);
+        // handle some edge cases
+        // limit to max zoom (handles tiny countries)
+        zoomScale = Math.min(zoomScale, maxZoom);
+        // limit to min zoom (handles large countries and countries that span the date line)
+        zoomScale = Math.max(zoomScale, minZoom);
+        // Find screen pixel equivalent once scaled
+        offsetX = zoomScale*zoomMidX;
+        offsetY = zoomScale*zoomMidY;
+        // Find offset to centre, making sure no gap at left or top of holder
+        dleft = Math.min(0,($("svg").width()/2)-offsetX);
+        dtop = Math.min(0,($("svg").height()/2)-offsetY);
+        // Make sure no gap at bottom or right of holder
+        dleft = Math.max($("svg").width()-(w*zoomScale),dleft);
+        dtop = Math.max($("svg").height()-(h*zoomScale),dtop);
+        // set zoom
+        svg
+          .transition()
+          .duration(500)
+          .call(zoom.transform,d3.zoomIdentity.translate(dleft, dtop).scale(zoomScale))
+        ;  
+      }
     </script>
   </body>
 </html>
