Met Art Collection

--- a/art/index.html
+++ b/art/index.html
@@ -8,8 +8,8 @@
     <meta property="og:title" content="Data Vis: The Met's Art Collection" />
     <meta property="og:description" content="446,029 objects from the collection of The Metropolitan Museum of Art displayed by creation date." />
     <meta property="og:image" content="http://www.andybarefoot.com/art/images/met-collection-dates.png" />
--->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:400i,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <script src="/jscript/analyticstracking.js"></script>
     <script src="/jscript/d3.v4.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
