--- a/mobile/index.html
+++ b/mobile/index.html
@@ -37,7 +37,7 @@
 				<hgroup>
 					<img id="portrait" src="/images/mobile-vr.png" alt="Andy Barefoot - Digital Professional" />
 					<div id="summary">
-						<h1><span id="nameTitle"><a href="/">Andy Barefoot</a> / </span> <a href="/datavis">Mobile</a></h1>
+						<h1><span id="nameTitle"><a href="/">Andy Barefoot</a> / </span> <a href="/mobile">Mobile</a></h1>
 						<p>A collection of Mobile Gaming and VR projects built using Unity and published to the Google Play and Apple app stores.</p>
 					</div>
 					<ul>
