--- a/got/grid.html
+++ b/got/grid.html
@@ -5,9 +5,9 @@
 
 		<meta charset="utf-8">
 		<meta property="og:url"	content="http://www.andybarefoot.com/got/grid.html" />
-		<meta property="og:title" content="Game of Thrones" />
-		<meta property="og:description" content="" />
-		<meta property="og:image" content="" />
+		<meta property="og:title" content="Game of Thrones: Every character" />
+		<meta property="og:description" content="Every character from Game of Thrones displayed in a grid." />
+		<meta property="og:image" content="http://www.andybarefoot.com/got/images/grid-of-thrones-share.png" />
 		<link href="https://fonts.googleapis.com/css?family=Trirong:100,200" rel="stylesheet">
 		<script src="/jscript/analyticstracking.js"></script>
 		<script src="/jscript/d3.v4.min.js"></script>
@@ -39,7 +39,7 @@
 		<script>
       function share(platform){
         shareURL = window.location.href;
-        shareText = 'Valar Morghulis: All the deaths in Game of Thrones';
+        shareText = "Every character from Game of Thrones displayed in a grid.";
         if(platform=="twitter")shareDest = 'http://twitter.com/intent/tweet?status='+shareText+'+'+shareURL;
         if(platform=="facebook")shareDest = 'http://www.facebook.com/sharer/sharer.php?u='+shareURL;
         if(platform=="google")shareDest = 'https://plus.google.com/share?url='+shareURL;
