--- a/got/allegiances.html
+++ b/got/allegiances.html
@@ -7,6 +7,12 @@
     <meta property="og:title" content="Game of Thrones - Web of Allegiances" />
     <meta property="og:description" content="An interactive map of Westeros and Essos showing the allegiances of al the characters from Game of Thrones." />
     <meta property="og:image" content="http://www.andybarefoot.com/got/images/web-of-allegiances.png" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@andybarefoot">
+    <meta name="twitter:creator" content="@andybarefoot">
+    <meta name="twitter:title" content="Game of Thrones - Web of Allegiances">
+    <meta name="twitter:description" content="An interactive map of Westeros and Essos showing the allegiances of al the characters from Game of Thrones.">
+    <meta name="twitter:image" content="http://www.andybarefoot.com/got/images/web-of-allegiances.png">
     <script src="/jscript/analyticstracking.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/jscript/d3.v4.min.js"></script>
