Twitter card for GoT sites

--- a/got/grid.html
+++ b/got/grid.html
@@ -8,6 +8,12 @@
 		<meta property="og:title" content="Game of Thrones: Every character" />
 		<meta property="og:description" content="Every character from Game of Thrones displayed in a grid." />
 		<meta property="og:image" content="http://www.andybarefoot.com/got/images/grid-of-thrones-share.png" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@andybarefoot">
+    <meta name="twitter:creator" content="@andybarefoot">
+    <meta name="twitter:title" content="Game of Thrones: Every character">
+    <meta name="twitter:description" content="Every character from Game of Thrones displayed in a grid.">
+    <meta name="twitter:image" content="http://www.andybarefoot.com/got/images/grid-of-thrones-share.png">
 		<link href="https://fonts.googleapis.com/css?family=Trirong:100,200" rel="stylesheet">
 		<script src="/jscript/analyticstracking.js"></script>
 		<script src="/jscript/d3.v4.min.js"></script>
