--- a/got/index.html
+++ b/got/index.html
@@ -8,7 +8,11 @@
 		<meta property="og:title" content="Valar Morghulis: All the deaths in Game of Thrones" />
 		<meta property="og:description" content="Fans of Game of Thrones know that Valar Morghulis (all men must die) but when over 200 named characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Lord of Light, or The Many-Faced God of Death, or the Great Stallion, etc...) then it gets hard to keep track of the tragedy. Fortunately Maester Barefoot has created a comprehensive record of all these deaths, whether violent, very violent or extremely violent." />
 		<meta property="og:image" content="http://www.andybarefoot.com/got/images/fb-got-deaths.png" />
-
+	    <meta name="twitter:site" content="@andybarefoot">
+	    <meta name="twitter:creator" content="@andybarefoot">
+	    <meta name="twitter:title" content="Valar Morghulis: All the deaths in Game of Thrones">
+	    <meta name="twitter:description" content="Fans of Game of Thrones know that Valar Morghulis (all men must die) but when over 200 named characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Lord of Light, or The Many-Faced God of Death, or the Great Stallion, etc...) then it gets hard to keep track of the tragedy. Fortunately Maester Barefoot has created a comprehensive record of all these deaths, whether violent, very violent or extremely violent.">
+	    <meta name="twitter:image" content="http://www.andybarefoot.com/got/images/fb-got-deaths.png">
 		<link href="https://fonts.googleapis.com/css?family=Trirong:100,200" rel="stylesheet">
 	    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 		<script src="/jscript/analyticstracking.js"></script>
