First food content

--- a/got/index.html
+++ b/got/index.html
@@ -45,6 +45,7 @@
 				<a href="javascript:share('google');"><img src="/images/icons/png32/googleplus.png" class="share"></a>
 				<a href="javascript:share('reddit');"><img src="/images/icons/png32/reddit.png" class="share"></a>
 			</p>
+			<p>[ Size of circle represents number of episodes character appeared in ]<br>[ Click circle to open info box ]
 		</div>
 		<div id="mainContent">
 		</div>
